--- a/Vostok.Logging.Abstractions/Extensions/LogExtensions.tt
+++ b/Vostok.Logging.Abstractions/Extensions/LogExtensions.tt
@@ -5,6 +5,7 @@ using JetBrains.Annotations;
 
 namespace Vostok.Logging.Abstractions
 {
+	[PublicAPI]
     public static class LogExtensions
     {
 <#
