Now using PreciseDateTime for timestamp generation in LogExtensions. Suffered a moderate performance drop.

--- a/Vostok.Logging.Abstractions/Extensions/LogExtensions.tt
+++ b/Vostok.Logging.Abstractions/Extensions/LogExtensions.tt
@@ -2,6 +2,7 @@
 <#@ output extension=".cs" #>
 using System;
 using JetBrains.Annotations;
+using Vostok.Commons.Time;
 
 namespace Vostok.Logging.Abstractions
 {
@@ -22,7 +23,7 @@ namespace Vostok.Logging.Abstractions
             if (!log.IsEnabledFor(LogLevel.<#=level #>))
                 return;
 
-            log.Log(new LogEvent(LogLevel.<#=level #>, DateTimeOffset.Now, message));
+            log.Log(new LogEvent(LogLevel.<#=level #>, PreciseDateTime.Now, message));
         }
 
         /// <summary>
@@ -33,7 +34,7 @@ namespace Vostok.Logging.Abstractions
             if (!log.IsEnabledFor(LogLevel.<#=level #>))
                 return;
 
-            log.Log(new LogEvent(LogLevel.<#=level #>, DateTimeOffset.Now, null, exception));
+            log.Log(new LogEvent(LogLevel.<#=level #>, PreciseDateTime.Now, null, exception));
         }
 
         /// <summary>
@@ -44,7 +45,7 @@ namespace Vostok.Logging.Abstractions
             if (!log.IsEnabledFor(LogLevel.<#=level #>))
                 return;
 
-            log.Log(new LogEvent(LogLevel.<#=level #>, DateTimeOffset.Now, message, exception));
+            log.Log(new LogEvent(LogLevel.<#=level #>, PreciseDateTime.Now, message, exception));
         }
 
         /// <summary>
@@ -61,7 +62,7 @@ namespace Vostok.Logging.Abstractions
                 return;
             }
 
-            log.Log(new LogEvent(LogLevel.<#=level #>, DateTimeOffset.Now, messageTemplate).WithObjectProperties(properties));
+            log.Log(new LogEvent(LogLevel.<#=level #>, PreciseDateTime.Now, messageTemplate).WithObjectProperties(properties));
         }
 
         /// <summary>
@@ -72,7 +73,7 @@ namespace Vostok.Logging.Abstractions
             if (!log.IsEnabledFor(LogLevel.<#=level #>))
                 return;
 
-            log.Log(new LogEvent(LogLevel.<#=level #>, DateTimeOffset.Now, messageTemplate).WithParameters(parameters));
+            log.Log(new LogEvent(LogLevel.<#=level #>, PreciseDateTime.Now, messageTemplate).WithParameters(parameters));
         }
 
         /// <summary>
@@ -89,7 +90,7 @@ namespace Vostok.Logging.Abstractions
                 return;
             }
 
-            log.Log(new LogEvent(LogLevel.<#=level #>, DateTimeOffset.Now, messageTemplate, exception).WithObjectProperties(properties));
+            log.Log(new LogEvent(LogLevel.<#=level #>, PreciseDateTime.Now, messageTemplate, exception).WithObjectProperties(properties));
         }
 
         /// <summary>
@@ -100,7 +101,7 @@ namespace Vostok.Logging.Abstractions
             if (!log.IsEnabledFor(LogLevel.<#=level #>))
                 return;
 
-            log.Log(new LogEvent(LogLevel.<#=level #>, DateTimeOffset.Now, messageTemplate, exception).WithParameters(parameters));
+            log.Log(new LogEvent(LogLevel.<#=level #>, PreciseDateTime.Now, messageTemplate, exception).WithParameters(parameters));
         }
 
         [Obsolete("Use the <#=level #>(ILog, Exception, string) overload instead.")]
