--- a/Vostok.Logging.Abstractions/Extensions/LogExtensions_Interpolated.tt
+++ b/Vostok.Logging.Abstractions/Extensions/LogExtensions_Interpolated.tt
@@ -91,8 +91,8 @@ namespace Vostok.Logging.Abstractions
                 MessageTemplate.Append('{');
                 MessageTemplate.Append(name);
                 MessageTemplate.Append('}');
-
-                Properties = Properties.Set(name, value);
+                
+                Properties.SetUnsafe(name, value, true);
             }
 
             internal bool IsEnabled { get; }
