temporary remove bad symbols from names

--- a/Vostok.Logging.Abstractions/Extensions/LogExtensions_Interpolated.tt
+++ b/Vostok.Logging.Abstractions/Extensions/LogExtensions_Interpolated.tt
@@ -8,6 +8,7 @@ using System.Text;
 using JetBrains.Annotations;
 using Vostok.Commons.Collections;
 using Vostok.Commons.Time;
+using Vostok.Logging.Abstractions.Helpers;
 
 // ReSharper disable MethodOverloadWithOptionalParameter
 
@@ -88,6 +89,8 @@ namespace Vostok.Logging.Abstractions
 
             public void AppendFormatted(object value, [CallerArgumentExpression("value")] string name = "")
             {
+                name = InterpolatedHelper.EscapeName(name);
+
                 MessageTemplate.Append('{');
                 MessageTemplate.Append(name);
                 MessageTemplate.Append('}');
