do not escape bad names

--- a/Vostok.Logging.Abstractions/Extensions/LogExtensions_Interpolated.tt
+++ b/Vostok.Logging.Abstractions/Extensions/LogExtensions_Interpolated.tt
@@ -89,13 +89,18 @@ namespace Vostok.Logging.Abstractions
 
             public void AppendFormatted(object value, [CallerArgumentExpression("value")] string name = "")
             {
-                name = InterpolatedHelper.EscapeName(name);
-
-                MessageTemplate.Append('{');
-                MessageTemplate.Append(name);
-                MessageTemplate.Append('}');
+                if (InterpolatedHelper.IsValidName(name))
+                {
+                    MessageTemplate.Append('{');
+                    MessageTemplate.Append(name);
+                    MessageTemplate.Append('}');
                 
-                Properties.SetUnsafe(name, value, true);
+                    Properties.SetUnsafe(name, value, true);
+                }
+                else
+                {
+                    MessageTemplate.Append(value);
+                }
             }
 
             internal bool IsEnabled { get; }
