--- a/Vostok.Logging.Abstractions/Extensions/LogExtensions_Interpolated.tt
+++ b/Vostok.Logging.Abstractions/Extensions/LogExtensions_Interpolated.tt
@@ -17,6 +17,11 @@ namespace Vostok.Logging.Abstractions
     [PublicAPI]
     public static class LogExtensions_Interpolated
     {
+        /// <summary>
+        /// If set to <c>true</c> <see cref="LogEvent.MessageTemplate"/> and <see cref="LogEvent.Properties"/> will be automatically calculated from the given interpolated string.
+        /// </summary>
+        public static bool Enabled { get; set; } = true;
+
 <#
     foreach (var level in new[] {"Debug", "Info", "Warn", "Error", "Fatal"})
     {
@@ -89,7 +94,7 @@ namespace Vostok.Logging.Abstractions
 
             public void AppendFormatted(object value, [CallerArgumentExpression("value")] string name = "")
             {
-                if (InterpolatedHelper.IsValidName(name))
+                if (Enabled && InterpolatedHelper.IsValidName(name))
                 {
                     MessageTemplate.Append('{');
                     MessageTemplate.Append(name);
